Estil llista preguntes enquesta

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -129,7 +129,7 @@
                         <h3>Nova pregunta</h3>
                         <div class="inputdata">
                             <label for="rbTipusText">Text</label>
-                            <span><input type="radio" name="tipusPregunta" id="rbTipusText" value="Text" checked></span>
+                            <span><input type="radio" name="tipusPregunta" id="rbTipusText" value="Text" checked="cheked" </span>
                         </div>
 
                         <div class="inputdata">
