--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -96,7 +96,7 @@
                     
                         <div class="boto">
                             <input type="submit" value="Modifica">
-                            <input type="button" class="tornar" name="tornar" value="Tornar"/></span>
+                            <span><input type="button" class="tornar" name="tornar" value="Tornar"/></span>
                         </div>
                     </div>
                     <div class="divFormulari" id="divPreguntes">
@@ -129,7 +129,7 @@
                         <h3>Nova pregunta</h3>
                         <div class="inputdata">
                             <label for="rbTipusText">Text</label>
-                            <span><input type="radio" name="tipusPregunta" id="rbTipusText" value="Text" checked="cheked" </span>
+                            <span><input type="radio" name="tipusPregunta" id="rbTipusText" value="Text" checked="checked"/> </span>
                         </div>
 
                         <div class="inputdata">
