afegit menu html5 + css3

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -27,7 +27,19 @@
             <img src="/img/Surveycity2.jpg" alt="Generador d'enquestes online" title="Generador d'enquestes online" />
         </div>
     </header>
-
+    <!-- begin navigation -->
+    <nav id="navigation">
+        <div>
+            <ul>
+                <li><a href="#">Inici</a></li>
+                <li><a href="#">Serveis</a></li>
+                <li><a href="#">Nova Enquesta</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacta</a></li>
+            </ul>
+        </div>
+    </nav>
+    <!-- end navigation -->
     <div id="content" class="contentContainer">
         <!-- DYNAMIC CONTENT -->
         <section id="sectionContainer">
