--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -31,9 +31,9 @@
     <nav id="navigation">
         <div>
             <ul>
-                <li><a href="#">Inici</a></li>
-                <li><a href="#">Serveis</a></li>
-                <li><a href="#">Nova Enquesta</a></li>
+                <li><a id="mInici" href="#">Inici</a></li>
+                <!-- <li><a href="#">Serveis</a></li> -->
+                <li><a id="mCrearEnq" href="#">Nova Enquesta</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contacta</a></li>
             </ul>
@@ -50,7 +50,6 @@
                     <div class="boto">
                         <input id="bCrearEnquesta" type="button" value="Crear enquesta">
                     </div>
-                    <hr/>
                     <!--
                     <h1>Get Enquesta</h1>
                     <input id="bGetEnquesta" type="button" value="Get Enquesta">
