--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -23,6 +23,30 @@
 
 <body>
     <header>
+        <!-- Login Starts Here -->
+        <div id="loginContainer">
+            <a href="#" id="loginButton"><span>Login</span><em></em></a>
+            <div style="clear:both"></div>
+            <div id="loginBox">
+                <form id="loginForm">
+                    <fieldset id="body">
+                        <fieldset>
+                            <label for="email">Email Address</label>
+                            <input type="text" name="email" id="email" />
+                        </fieldset>
+                        <fieldset>
+                            <label for="password">Password</label>
+                            <input type="password" name="password" id="password" />
+                        </fieldset>
+                        <input type="submit" id="login" value="Sign in" />
+                        <label for="checkbox"><input type="checkbox" id="checkbox" />Remember me</label>
+                    </fieldset>
+                    <span><a href="#">Forgot your password?</a></span>
+                </form>
+            </div>
+        </div>
+        <!-- Login Ends Here -->
+
         <div class="logo">
             <img src="/img/Surveycity2.jpg" alt="Generador d'enquestes online" title="Generador d'enquestes online" />
         </div>
