modificacions de disseny

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -55,11 +55,10 @@
     <nav id="navigation">
         <div>
             <ul>
-                <li><a id="mInici" href="#">Inici</a></li>
-                <!-- <li><a href="#">Serveis</a></li> -->
-                <li><a id="mCrearEnq" href="#">Nova Enquesta</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contacta</a></li>
+                <li><a id="mInici">Inici</a></li>
+                <li><a id="mCrearEnq">Nova Enquesta</a></li>
+                <li><a id="mRegistre">Registra't</a></li>
+                <li><a id="mContacta">Contacta</a></li>
             </ul>
         </div>
     </nav>
@@ -202,6 +201,42 @@
                 </form>
             </div>
             <!-- FI AFEGIR PREGUNTES -->
+            <!-- REGISTRE -->
+            <div id="registre" class="template">
+                <form action="#" class="formRegistre">
+                    <h2>Registre</h2>
+                    <div><img style="margin: 0 auto; display: block; padding: 10px 10px 30px;"
+                              src="/img/website_under_construction.png" /></div>
+                    <!--
+                    <div>
+                        <label for="titol">Id</label>
+                        <input type="text" class="titol" name="titol" id="id">
+
+                        <input type="submit" value="Cerca">
+                    </div>
+                    -->
+                    <input type="button" class="tornar" name="tornar" value="Tornar"/>
+                </form>
+            </div>
+            <!-- FI REGISTRE -->
+            <!-- CONTACTAR -->
+            <div id="contactar" class="template">
+                <form action="#" class="formContactar">
+                    <h2>Contacta amb nosaltres</h2>
+                    <div><img style="margin: 0 auto; display: block; padding: 10px 10px 30px;"
+                              src="/img/website_under_construction.png" /></div>
+                    <!--
+                    <div>
+                        <label for="titol">Id</label>
+                        <input type="text" class="titol" name="titol" id="id">
+
+                        <input type="submit" value="Cerca">
+                    </div>
+                    -->
+                    <input type="button" class="tornar" name="tornar" value="Tornar"/>
+                </form>
+            </div>
+            <!-- FI CONTACTAR -->
         </section>
         <section class="template">
             <p class="error template">Error message here</p>
