--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
     
     
