--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="/scripts/jquery.alerts.js"></script>
 
     <script src="/scripts/funcions.js"></script>
-    <script src="/scripts/enquestadorV3.js"></script>
+    <script src="/scripts/enquestador.js"></script>
 </head>
 
 <body>
