--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -40,6 +40,9 @@
                             <label for="password">Password</label>
                             <input type="password" name="password" id="password" />
                         </fieldset>
+                        <fieldset id="loginFailed" class="template">
+                            <span>Usuari o contrasenya incorrectes!</span>
+                        </fieldset>
                         <input type="submit" id="login" value="Sign in" />
                         <label for="checkbox"><input type="checkbox" id="checkbox" />Remember me</label>
                     </fieldset>
@@ -58,6 +61,7 @@
         <div>
             <ul>
                 <li><a id="mInici">Inici</a></li>
+                <li class="admin template"><a id="mllistatEnq">Llistat d'enquestes</a></li>
                 <li><a id="mCrearEnq">Nova Enquesta</a></li>
                 <li><a id="mRegistre">Registra't</a></li>
                 <li><a id="mContacta">Contacta</a></li>
@@ -239,6 +243,11 @@
                 </form>
             </div>
             <!-- FI CONTACTAR -->
+            <!-- LLISTAT D'ENQUESTES -->
+            <div id = "llistatEnq" class="template">
+                <p></p>
+            </div>
+            <!-- FI LLISTAT D'ENQUESTES -->
         </section>
         <section class="template">
             <p class="error template">Error message here</p>
