"Formulari per respondre Enquestes. 80%"

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -248,6 +248,17 @@
                 <p></p>
             </div>
             <!-- FI LLISTAT D'ENQUESTES -->
+            <!-- RESPONDRE ENQUESTA -->
+            <div id = "respondEnq" class="template">
+                <form action="#" class="formRespEnq">
+                    <h2>Respondre Enquesta</h2>
+                    <label for="veureTitolResp" id="veureTitolResp">Títol</label>
+                    <label for="veureDesMResp" id="veureDesMResp">Títol</label>
+                    <label for="veureFinsMResp" id="veureFinsMResp">Títol</label>
+                    <div class="divFormulariResp" id="divPreguntesResp">
+                    </div>
+            </div>
+            <!-- RESPONDRE ENQUESTA -->
         </section>
         <section class="template">
             <p class="error template">Error message here</p>
