--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -73,6 +73,14 @@
         </div>
     </nav>
     <!-- end navigation -->
+
+    <div id="messageSuccess" class="template message success">         
+         <p>L'acció s'ha realitzat correctament.</p>
+    </div>
+    <div id="messageFail" class="template message fail">         
+         <p>Vaja, s'ha produït un error.</p>
+    </div>
+
     <div id="content" class="contentContainer">
         <!-- DYNAMIC CONTENT -->
         <section id="sectionContainer">
