Acabar enquesta fet

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -150,8 +150,8 @@
                             <span><input type="button" class="tornar" name="tornar" value="Tornar"/></span>
                             <span><input type="submit" class="publicar" name="publicar" value="Publicar"/></span>
                         </div>
-                        <div>
-                            <h3 id ="estatEnq">Estat de l'enquesta</h3>
+                        <div id = "estatEnquesta">
+                            <h4 id ="estatEnq">Estat de l'enquesta:</h4>
                         </div>
                     </div>
                     <h2>Preguntes</h2>
