Arreglos sobre l'estat de l'enquesta

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -129,7 +129,7 @@
             <!-- VEURE ENQUESTA -->
             <div id = "veureEnquesta" class="template">
                 <form action="#" id="formVeureEnquesta" class="validarFormulari">
-                    <h2>Veure Enquesta</h2>
+                    <h2>Dades de  l'enquesta</h2>
                     <div class="divFormulari">
                         <div class="inputdata">
                             <label for="veureTitol">Títol</label>
@@ -148,11 +148,13 @@
                         <div class="boto">
                             <input type="submit" class="modifica" name="modifica" value="Modifica">
                             <span><input type="button" class="tornar" name="tornar" value="Tornar"/></span>
-                            <span><input type="submit" class="publicar" name="publicar" value="Publicar"/></span>
                         </div>
-                        <div id = "estatEnquesta">
-                            <h4 id ="estatEnq">Estat de l'enquesta:</h4>
-                        </div>
+                    </div>
+                    <div id = "estatEnquesta">
+                        <h2 id ="estatEnq">Estat de l'enquesta</h2>
+                    </div>
+                    <div class="boto2">
+                        <input type="submit" class="publicar" name="publicar" value="Publicar"/>
                     </div>
                     <h2>Preguntes</h2>
                     <div class="divFormulari" id="divPreguntes">
