--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -120,7 +120,7 @@
                     
                         <div class="boto">
                             <input type="submit" value="Crea">
-                            <input type="button" class="tornar" name="tornar" value="Tornar"/>
+                            <input type="button" class="tornar" name="tornar" value="Torna"/>
                         </div>
                     </div>
                 </form>
@@ -147,22 +147,73 @@
                         </div>
                         <div class="boto">
                             <input type="submit" class="modifica" name="modifica" value="Modifica">
-                            <span><input type="button" class="tornar" name="tornar" value="Tornar"/></span>
+                            <span><input type="button" class="tornar" name="tornar" value="Torna"/></span>
                         </div>
                     </div>
                     <div id = "estatEnquesta">
                         <h2 id ="estatEnq">Estat de l'enquesta</h2>
                     </div>
                     <div class="boto2">
-                        <input type="submit" class="publicar" name="publicar" value="Publicar"/>
-                    </div>
-                    <h2>Preguntes</h2>
-                    <div class="divFormulari" id="divPreguntes">
-                    </div>
-                    <div class="boto">
-                        <input type="button" id="bAfegirPreguntes" name="bAfegirPreguntes" value="Afegir pregunta" />
-                    </div>
+                        <input type="submit" class="publicar" name="publicar" value="Publica"/>
+                    </div>                    
                 </form>
+
+
+                <h2>Preguntes</h2>                
+                <!--<div class="boto">
+                    <input type="button" id="bAfegirPreguntes" name="bAfegirPreguntes" value="Afegir pregunta" />
+                </div>-->
+
+
+                <!-- AFEGIR PREGUNTES -->
+                <div id = "afegirPreguntes" >
+                    <form action="#" id="formAfegirPreguntes" class="validarFormulari">
+                        <div class="divFormulari">
+                            <h3>Nova pregunta</h3>
+                            <div class="inputdata">
+                                <label for="rbTipusText">Text</label>
+                                <span><input type="radio" name="tipusPregunta" id="rbTipusText" value="Text" checked="checked"/> </span>
+                            </div>
+
+                            <div class="inputdata">
+                                <label for="rbTipusTest">Test</label>
+                                <span><input type="radio" name="tipusPregunta" id="rbTipusTest" value="Test"></span>
+                            </div>
+
+                            <div class="inputdata">
+                                <label for="rbTipusMulti">Multiresposta</label>
+                                <span><input type="radio" name="tipusPregunta" id="rbTipusMulti" value="Multi"></span>
+                            </div>
+
+                            <div class="inputdata">
+                                <label for="titolPregunta">Pregunta</label>
+                                <span><input type="text" name="titolPregunta" id="titolPregunta" class="required"></span>
+                            </div>
+
+                            <div id="preguntaTest" class="template">                            
+                                <h4>Respostes</h4>
+                                <div id="divAfegirResposta">
+                                    <input type="hidden" id="numResposta" value="1"/>
+                                    <div class="inputdata">
+                                        <label for="respostaPregunta1">Resposta</label>
+                                        <span><input type="text" name="respostaPregunta1" id="respostaPregunta1" class="respostaPregunta required"></span>
+                                    </div>
+                                    <div id="divAfegirNovaResposta"></div>
+                                </div>
+                                <div id="divAfegirRespostaBoto" class="boto">
+                                    <input type="button" id="bAfegirResposta" name="bAfegirResposta" value="Afegir resposta">
+                                </div>
+                            </div>
+                            <div class="boto">
+                                <input type="submit" id="bGuardarResposta" name="bGuardarResposta" value="Desa">
+                            </div>
+                            <div class="separador"></div>
+                        </div>
+                    </form>
+                </div>
+                <!-- FI AFEGIR PREGUNTES -->
+
+                <div class="divFormulari" id="divPreguntes"></div>
             </div>
             <!-- FI VEURE ENQUESTA -->
             <!-- OBTINDRE ENQUESTA -->
@@ -175,55 +226,11 @@
 
                         <input type="submit" value="Cerca">
                     </div>
-                    <input type="button" class="tornar" name="tornar" value="Tornar"/>
+                    <input type="button" class="tornar" name="tornar" value="Torna"/>
                 </form>
             </div>
             <!-- FI OBTINDRE ENQUESTA -->
-            <!-- AFEGIR PREGUNTES -->
-            <div id = "afegirPreguntes" class="template">
-                <form action="#" id="formAfegirPreguntes" class="validarFormulari">
-                    <div class="divFormulari">
-                        <h3>Nova pregunta</h3>
-                        <div class="inputdata">
-                            <label for="rbTipusText">Text</label>
-                            <span><input type="radio" name="tipusPregunta" id="rbTipusText" value="Text" checked="checked"/> </span>
-                        </div>
-
-                        <div class="inputdata">
-                            <label for="rbTipusTest">Test</label>
-                            <span><input type="radio" name="tipusPregunta" id="rbTipusTest" value="Test"></span>
-                        </div>
-
-                        <div class="inputdata">
-                            <label for="rbTipusMulti">Multiresposta</label>
-                            <span><input type="radio" name="tipusPregunta" id="rbTipusMulti" value="Multi"></span>
-                        </div>
-
-                        <div class="inputdata">
-                            <label for="titolPregunta">Pregunta</label>
-                            <span><input type="text" name="titolPregunta" id="titolPregunta" class="required"></span>
-                        </div>
-
-                        <div id="preguntaTest" class="template">                            
-                            <h4>Respostes</h4>
-                            <div id="divAfegirResposta">
-                                <div class="inputdata">
-                                    <label for="respostaPregunta1">Resposta 1</label>
-                                    <span><input type="text" name="respostaPregunta1" id="respostaPregunta1" class="respostaPregunta required"></span>
-                                </div>
-                            </div>
-                            <div id="divAfegirRespostaBoto" class="boto">
-                                <input type="button" id="bAfegirResposta" name="bAfegirResposta" value="Afegir resposta">
-                            </div>
-                        </div>
-                        <div class="boto">
-                            <input type="submit" id="bGuardarResposta" name="bGuardarResposta" value="Guardar">
-                        </div>
-                        <div class="separador"></div>
-                    </div>
-                </form>
-            </div>
-            <!-- FI AFEGIR PREGUNTES -->
+            
             <!-- REGISTRE -->
             <div id="registre" class="template">
                 <form action="#" class="formRegistre">
@@ -238,7 +245,7 @@
                         <input type="submit" value="Cerca">
                     </div>
                     -->
-                    <input type="button" class="tornar" name="tornar" value="Tornar"/>
+                    <input type="button" class="tornar" name="tornar" value="Torna"/>
                 </form>
             </div>
             <!-- FI REGISTRE -->
@@ -256,7 +263,7 @@
                         <input type="submit" value="Cerca">
                     </div>
                     -->
-                    <input type="button" class="tornar" name="tornar" value="Tornar"/>
+                    <input type="button" class="tornar" name="tornar" value="Torna"/>
                 </form>
             </div>
             <!-- FI CONTACTAR -->
