ahora se indica en el navigation donde estas

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -64,11 +64,11 @@
     <nav id="navigation">
         <div>
             <ul>
-                <li><a id="mInici">Inici</a></li>
-                <li class="admin template"><a id="mllistatEnq">Llistat d'enquestes</a></li>
-                <li><a id="mCrearEnq">Nova Enquesta</a></li>
-                <li><a id="mRegistre">Registra't</a></li>
-                <li><a id="mContacta">Contacta</a></li>
+                <li id="lInici" class="current"><a id="mInici">Inici</a></li>
+                <li id="lLlista" class="admin template"><a id="mllistatEnq">Llistat d'enquestes</a></li>
+                <li id="lNova"><a id="mCrearEnq">Nova Enquesta</a></li>
+                <li id="lRegistre"><a id="mRegistre">Registra't</a></li>
+                <li id="lContacte"><a id="mContacta">Contacta</a></li>
             </ul>
         </div>
     </nav>
