--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -274,11 +274,24 @@
             <!-- RESPONDRE ENQUESTA -->
             <div id = "respondEnq" class="template">
                 <form action="#" class="formRespEnq">
-                    <h2>Respondre Enquesta</h2>
-                    <label for="veureTitolResp" id="veureTitolResp">Títol</label>
-                    <label for="veureDesMResp" id="veureDesMResp">Títol</label>
-                    <label for="veureFinsMResp" id="veureFinsMResp">Títol</label>
+                    <h2>Informacio Enquesta</h2>
+                    <div class="inputdata">
+                            <label>Títol de l'enquesta: </label>
+                            <label for="veureTitolResp" id="veureTitolResp">Títol</label><br></br>
+                        </div>
+                     <div class="inputdata">
+                            <label>Data Inici: </label>
+                            <label for="veureDesMResp" id="veureDesMResp">Títol</label>
+                            <br></br>
+                        </div>
+                     <div class="inputdata">
+                            <label>Data de tancament: </label>
+                            <label for="veureFinsMResp" id="veureFinsMResp">Títol</label><br></br>
+                            <span></span>
+                        </div>
+                    <h2>Preguntes Enquesta</h2>
                     <div class="divFormulariResp" id="divPreguntesResp">
+                     
                     </div>
             </div>
             <!-- RESPONDRE ENQUESTA -->
