Modificat js per afegir respostes

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -273,7 +273,7 @@
             <!-- FI LLISTAT D'ENQUESTES -->
             <!-- RESPONDRE ENQUESTA -->
             <div id = "respondEnq" class="template">
-                <form action="#" class="formRespEnq">
+                <form id = "formRespEnq" action="#" class="formRespEnq">
                     <h2>Informacio Enquesta</h2>
                     <div class="inputdata">
                             <label>Títol de l'enquesta: </label>
