Visualitzar llista de enquestats que han respost

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -150,14 +150,24 @@
                             <span><input type="button" class="tornar" name="tornar" value="Torna"/></span>
                         </div>
                     </div>
+                    <!-- ESTAT ENQUESTA-->
                     <div id = "estatEnquesta">
                         <h2 id ="estatEnq">Estat de l'enquesta</h2>
                     </div>
                     <div class="boto2">
                         <input type="submit" class="publicar" name="publicar" value="Publica"/>
-                    </div>                    
+                    </div>
+                    <div class="boto2">
+                        <input type="button" class="veureR" name="veureR" value="Veure Respostes"/>
+                    </div>  
+                    <!-- FI ESTAT ENQUESTA-->                    
                 </form>
 
+                <!-- VEURE RESPOSTES-->
+                <div id = "veureRespostes" class = "template">
+                    <h2>Persones que han respost l'enquesta</h2> 
+                </div>
+                <!-- FI VEURE RESPOSTES-->
 
                 <h2>Preguntes</h2>                
                 <!--<div class="boto">
