"Veure Respostes d'un usuari en concret"

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -164,9 +164,16 @@
                 </form>
 
                 <!-- VEURE RESPOSTES-->
+
+                <div id = "veureRespostesUser" class = "template">
+                    <h2>Respostes d'usuari</h2> 
+                </div>
+                
                 <div id = "veureRespostes" class = "template">
                     <h2>Persones que han respost l'enquesta</h2> 
                 </div>
+
+
                 <!-- FI VEURE RESPOSTES-->
 
                 <h2>Preguntes</h2>                
