Veure respostes a part de l'enquesta

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -163,17 +163,6 @@
                     <!-- FI ESTAT ENQUESTA-->                    
                 </form>
 
-                <!-- VEURE RESPOSTES-->
-
-                <div id = "veureRespostesUser" class = "template">
-                    <h2>Respostes d'usuari</h2> 
-                </div>
-                
-                <div id = "veureRespostes" class = "template">
-                    <h2>Persones que han respost l'enquesta</h2> 
-                </div>
-
-
                 <!-- FI VEURE RESPOSTES-->
 
                 <h2>Preguntes</h2>                
@@ -233,6 +222,17 @@
                 
             </div>
             <!-- FI VEURE ENQUESTA -->
+
+            <!-- VEURE RESPOSTES-->
+                <div id = "veureRespostes" class = "template">
+                    <h2>Persones que han respost l'enquesta</h2> 
+                </div>
+
+                <div id = "veureRespostesUser" class = "template">
+                    <h2>Respostes d'usuari</h2> 
+                </div>
+            <!-- FI VEURE RESPOSTES-->
+
             <!-- OBTINDRE ENQUESTA -->
             <div id="getEnquesta" class="template">
                 <form action="#" class="formGetEnquesta">
