añadido boton tornar en el registro de usuarios

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -253,7 +253,7 @@
                 <h2>Registre</h2>
                 <form action="#" class="formRegistre" id="formReg" name="formReg">
                     <!--<div><img style="margin: 0 auto; display: block; padding: 10px 10px 30px;"  src="/img/website_under_construction.png" /></div>-->
-                    <div class="divFormulari">
+                    <div class="divFormulari" id="formRegistre">
                         <div class="inputdata">
                             <label for="titol">E-mail</label>
                             <input type="email" class="email" name="emailReg" id="emailReg" required><br/>
@@ -266,10 +266,10 @@
                             <label for="titol">Retype Password</label>
                             <input type="password" class="pass" name="passReg2" id="passReg2" required oninput="checkpass()">
                         </div>
-
-                        <div class="boto">
-                            <input type="submit" value="Registre" id="subRegistre">
-                        </div>
+                    </div>
+                    <div class="boto">
+                        <input type="submit" value="Registre" id="subRegistre">
+                        <input type="button" class="tornar" name="tornar" value="Torna"/>
                     </div>
                 </form>
             </div>
