--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -110,7 +110,7 @@
 
                         <div class="inputdata">
 		                  <label for="dataInici">Des de</label>
-		                  <span><input type="text" id="dataInici" name="dataInici" class="from required" placeholder="dd-mm-aaaa" maxlength="10"/></span>
+		                  <span><input type="text" id="dataInici" name="dataInici" class="from" placeholder="dd-mm-aaaa" maxlength="10"/></span>
 	                   </div>
 
                         <div class="inputdata">
@@ -138,7 +138,7 @@
 
                         <div class="inputdata">
                             <label for="veureDesM">Des de</label>
-                            <span><input type="text" id="veureDesM" name="veureDesM" class="from required" placeholder="dd-mm-aaaa" maxlength="10"/></span>
+                            <span><input type="text" id="veureDesM" name="veureDesM" class="from" placeholder="dd-mm-aaaa" maxlength="10"/></span>
                         </div>
 
                         <div class="inputdata">
@@ -320,6 +320,7 @@
                     <div class="divFormulariResp" id="divPreguntesResp">
                      
                     </div>
+                </form>
             </div>
             <!-- RESPONDRE ENQUESTA -->
         </section>
