Apartat contacte, treure imatge under construction

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -278,17 +278,14 @@
             <div id="contactar" class="template">
                 <form action="#" class="formContactar">
                     <h2>Contacta amb nosaltres</h2>
-                    <div><img style="margin: 0 auto; display: block; padding: 10px 10px 30px;"
-                              src="/img/website_under_construction.png" /></div>
-                    <!--
-                    <div>
-                        <label for="titol">Id</label>
-                        <input type="text" class="titol" name="titol" id="id">
-
-                        <input type="submit" value="Cerca">
+                    <div class="contacte">
+                        <p>Grup 1 DSBW</p><br/>
+                        <p>Facultat d'Informàtica de Barcelona (FIB)</p>
                     </div>
-                    -->
-                    <input type="button" class="tornar" name="tornar" value="Torna"/>
+
+                    <div class="boto">
+                        <input type="button" class="tornar" name="tornar" value="Torna"/>
+                    </div>
                 </form>
             </div>
             <!-- FI CONTACTAR -->
